# esp32c3-current-monitor

./: Cargo.toml  README.md  build.rs  rust-toolchain.toml  shell.nix
.cargo/: config.toml
src/: main.rs
