[package]
name = "esp32c3-current-monitor"
version = "0.1.0"
edition = "2021"
rust-version = "1.67.0"

[dependencies]
critical-section = "1.1.2"
document-features = "0.2.7"
embassy-executor = { version = "0.6.0", features = [
   #"nightly",
   #"integrated-timers",
   "task-arena-size-40960",
] }
embassy-futures = "0.1.1"
embassy-sync = "0.6.0"
embassy-time = { version = "0.3.1", features = [ "generic-queue-8" ] }
embassy-time-driver = { version = "0.1.0", features = ["tick-hz-1_000_000"] } # USE WITH TIMG0

esp-backtrace = { version = "0.14.0", default-features = false, features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "println",
    "halt-cores",
] }

esp-println = { version = "0.11.0", features = [ "esp32c3", "auto", "log"], default-features = false}

# NEW on 2024-06-16
esp-hal = { version = "0.20.1", features = [
   "esp32c3",
   "async",
   "log",
   "embedded-hal",
   "embedded-hal-02",
   "embedded-io",
] }


esp-hal-embassy = { version = "0.3.0", features = [
    "esp32c3",            # Compatible with all chips
] }

embassy-usb = { version = "0.1.0", default-features = false }
log = { version = "0.4.20" }
r0 = { version = "1.0.0" }
static_cell = { version = "2.0.0", features = ["nightly"] }
usb-device = { version = "0.3.1", features = ["control-buffer-256"] }
usbd-serial = "0.2.0"
embedded-hal-async = "1.0.0"
embedded-hal = "1.0.0"
#once_cell = { version = "1.19.0", features = ["alloc", "race"], default-features = false }
#lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
smart-leds = "0.4.0"

embedded-graphics = "0.8.1"
embassy-embedded-hal = "0.1.0"
embedded-hal-bus = { version = "0.2.0", features = ["async"] }
ssd1306-i2c = "0.1.5"
esp-alloc = "0.4.0"
ina3221 = { git = "https://github.com/leighleighleigh/ina3221", version = "0.4.5" }

[profile.release]
debug = false
opt-level = 3

[profile.dev]
opt-level = 0

[[bin]]
path = "src/main.rs"
name = "app"
test = false
bench = false

